# programmingTest

./: .gitignore  CMakeLists.txt  build.sh  log.txt  run_all.sh
src/: experiments.cpp  main.cpp  matrix_utils.cpp  matrix_utils.h  standard.cpp  standard.h  strassen.cpp  strassen.h  tests.cpp  validate.cpp
